--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-07-28 00:44:35
+lastsearch = 2024-07-28 03:39:58
 
 [tiki.vn]
-match = -138.9%%
-title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
+match = -144.4%%
+title = Mua Bộ Chăn Ga Gối Everon mẫu mới nhất của năm 2021. ...
+url = https://tiki.vn/bo-chan-ga-goi-everon-cao-cap-mau-moi-nhat-cua-nam-2021-bo-san-pham-gom-1-ga-phu-hoac-ga-chun-chan-co-gia-chi-tiet-theo-san-pham-1-chan-4-mua-co-chan-lop-bong-mong-ben-trong-2-vo-goi-nam-co-45x65cm-p71564428.html?spid=76160906
 
 [nemxinh.net]
 match = 50.0%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh ngọc
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-ngoc.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A112 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a112
+match = -55.6%%
+title = Bộ ga phủ Common C106 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-common-c106
 
 [aeoneshop.com]
 match = -105.6%%
@@ -52,9 +52,9 @@ title = Bộ Chăn Ga Gối Làm Mát Gấu Hóme Cóordy SS24 ...
 url = https://aeoneshop.com/product/29674/bo-chan-ga-goi-lam-mat-gau-ss24-160x200-mau-xanh-duong
 
 [everonvn.com.vn]
-match = 27.8%%
-title = Bộ Everon Esm-20011
-url = https://everonvn.com.vn/everon/809/bo-everon-esm-20011
+match = -116.7%%
+title = Bộ Ga Chun Chần Everon Green-Solid Giảm Giá 35%%
+url = https://everonvn.com.vn/everon/2149/bo-ga-chun-chan-green-solid
 
 [www.everonvni.vn]
 match = -77.8%%
@@ -117,9 +117,9 @@ title = Bộ chăn ga gối Everon EST-21033
 url = https://everonhanquoc.vn/everon/12745/bo-chan-ga-goi-everon-est-21033
 
 [www.lazada.vn]
-match = -144.4%%
-title = Bộ Chăn Ga Gối Phủ 7 Món Cao Cấp Trần Bông 1m6 x2m Màu ...
-url = https://www.lazada.vn/products/bo-chan-ga-goi-phu-7-mon-cao-cap-tran-bong-1m6-x2m-mau-tim-tang-1-ga-thun-lanh-i1300704987-s5005176343.html
+match = -122.2%%
+title = Bộ chăn ga gối phủ 7 món cao cấp trần bông 1m6 x2m ...
+url = https://www.lazada.vn/products/bo-chan-ga-goi-phu-7-mon-cao-cap-tran-bong-1m6-x2m-mau-xanh-duong-i1279664498.html
 
 [kyoryo.vn]
 match = -61.1%%
@@ -160,4 +160,14 @@ url = https://demviet.vn/bo-chan-ga-goi-kim-cuong-5-mon-vai-tencel-1-mau.html
 match = -77.8%%
 title = PORTO - Queen size bed 160x200 - Natural Oak
 url = https://decosy.com/vi_VN/shop/product/dcs-001425-61580-porto-queen-size-bed-160x200-natural-oak-1241
+
+[kyoryo.com.vn]
+match = -16.7%%
+title = Bộ chăn ga Modal Hoa Phù Dung
+url = http://kyoryo.com.vn/bo-chan-ga-goi-modal-ngoc-trai/bo-chan-ga-modal-hoa-phu-dung.html
+
+[thegioidemviet.vn]
+match = -50.0%%
+title = BỘ CHĂN GA PHỦ THÊU BLUE SKY – BS 86
+url = https://thegioidemviet.vn/bo-chan-ga-phu-theu-blue-sky-bs-86/
 
