--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-07-27 22:27:44
+lastsearch = 2024-07-28 03:39:18
 
 [demxanh.com]
 match = -60.9%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc cao bằng 1.4 X 1.95
 url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
 
 [shopee.vn]
-match = 43.5%%
-title = Chiếu trúc cao bằng 1.4m x 1.95
-url = https://shopee.vn/Chiếu-trúc-cao-bằng-1.4m-x-1.95-i.79170238.1321077017
+match = -69.6%%
+title = Chiếu trúc cây cao bằng sịn hàng loại 1 (chiếu 2x2.2 liên ...
+url = https://shopee.vn/Chiếu-trúc-cây-cao-bằng-sịn-hàng-loại-1-(chiếu-2x2.2-liên-hệ-với-shop-)-i.68883759.1152873373
 
 [lombom.com]
 match = -60.9%%
@@ -140,4 +140,9 @@ url = https://thuongmaibiengioimiennui.gov.vn/san-pham-vung-mien/2019/9/hanh-tri
 match = -60.9%%
 title = Chiếu trúc tre Tây Bắc Cao Bằng loại đẹp (Mát Lạnh Mùa Hè)
 url = https://tiki.vn/chieu-truc-tre-tay-bac-cao-bang-loai-dep-mat-lanh-mua-he-p114761788.html?spid=173153685
+
+[khodemhanoi.vn]
+match = -13.0%%
+title = Chiếu Trúc Cây Cao Bằng Chiếu Việt Nam Tốt Nhất
+url = https://khodemhanoi.vn/chieu-truc-cay-cao-bang/
 
