--- a/images/chieu-truc-den-10/config.ini
+++ b/images/chieu-truc-den-10/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-den-10.html
 lastopen = 2024-06-07 00:19:41
 
 [search]
-lastsearch = 2024-07-27 22:28:13
+lastsearch = 2024-07-28 03:30:16
 
 [demxanh.com]
-match = -135.3%%
-title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+match = 64.7%%
+title = Chiếu trúc hạt đen
+url = https://demxanh.com/chieu-truc-hat-den-ha-noi.html
 
 [dem24h.vn]
 match = -29.4%%
@@ -17,9 +17,9 @@ title = Chiếu Trúc Cao Cấp Hạt Đen Không Viền
 url = https://dem24h.vn/chieu-truc-hat-den-khong-vien
 
 [thegioidemtot.vn]
-match = -58.8%%
-title = BST CHIẾU TRÚC HẠT ĐEN CHÍNH HÃNG - Hà Nội
-url = https://thegioidemtot.vn/392-chieu-truc-hat-den.html
+match = 46.2%%
+title = Chiếu Hạt Đen
+url = https://thegioidemtot.vn/dt17327-chieu-hat-den.html
 
 [demre.com.vn]
 match = 35.3%%
