--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-07-27 18:11:59
+lastsearch = 2024-07-28 03:31:16
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -84,7 +84,7 @@ url = https://sieuthidienmaypico.com/tham-chui-chan-ariel-mau-xanh-nti272043734.
 [jysk.vn]
 match = -62.5%%
 title = Thảm Chùi Chân Trải Cửa Ra Vào Đẹp, Nhiều Mẫu - JYSK.vn
-url = https://jysk.vn/tham-trai-cua?srsltid=AfmBOooQHBv2H7Jq-JgitT8Upl-RWaI5OA-Xw2HOpXg4tV0oMVDxw4NY
+url = https://jysk.vn/tham-trai-cua
 
 [shouse.vn]
 match = -50.0%%
