--- a/images/chieu-gap-dai-loan-lua-15/config.ini
+++ b/images/chieu-gap-dai-loan-lua-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-15.html
 lastopen = 2024-06-09 21:46:38
 
 [search]
-lastsearch = 2024-07-27 23:21:53
+lastsearch = 2024-07-28 03:46:58
 
 [shopee.vn]
 match = -28.0%%
@@ -22,9 +22,9 @@ title = XUẤT KHẨU LAO ĐỘNG ĐÀI LOAN: TUYỂN GẤP 15 NAM ...
 url = https://hoanglongcms.com/donhang/xuat-khau-lao-dong-dai-loan-tuyen-gap-15-nam-san-xuat-thuy-tinh/
 
 [www.facebook.com]
-match = -92.0%%
-title = Bản tin tiếng Việt PTS 公視越南語新聞 | Taipei
-url = https://www.facebook.com/ptsvietnamesenews/
+match = 12.0%%
+title = Xin chào, tôi ở Đài Loan | Kaohsiung
+url = https://www.facebook.com/toiodailoan/?locale=vi_VN
 
 [vi.wikipedia.org]
 match = 12.5%%
@@ -47,9 +47,9 @@ title = Chương trình phát triển tên lửa của Đài Loan
 url = https://nghiencuuchienluoc.org/chuong-trinh-phat-trien-ten-lua-cua-dai-loan-la-chan-phong-thu-truoc-tham-vong-cua-trung-quoc/
 
 [books.google.com]
-match = -92.0%%
-title = Tuttle Concise Vietnamese Dictionary: Vietnamese-English ...
-url = https://books.google.com/books?id=zbxGCgAAQBAJ&pg=PA606&lpg=PA606&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=5ojVGybNj6&sig=ACfU3U3GxzuhigOPbmkFOJOBIqvzoBlWCg&hl=en&sa=X&ved=2ahUKEwjp-re3osaHAxV3IUQIHeCNB6QQ6AF6BAgXEAM
+match = -44.0%%
+title = Chiến sĩ Cộng Hòa - Page 12 - Google Books Result
+url = https://books.google.com/books?id=X2clAAAAMAAJ&pg=PA12&lpg=PA12&dq=chieu+gap+dai+loan+lua+15&source=bl&ots=p30RRE6WJx&sig=ACfU3U2Cbu4rUax5Ik_fyBcvG9ykzX4zmA&hl=en&sa=X&ved=2ahUKEwj4uqLVi8iHAxXxAHkGHXx9B4kQ6AF6BAgYEAM
 
 [cellphones.com.vn]
 match = -52.0%%
