--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-07-27 22:19:14
+lastsearch = 2024-07-28 03:44:38
 
 [everon.vip]
 match = -10.0%%
@@ -14,7 +14,7 @@ url = https://everon.vip/nem
 [everonvn.com.vn]
 match = 23.8%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOoqgiiCAplj5Dlb9EqcYG0NVoxGzaVeE4VJsi4QiVKfYFE2kJZdM
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [www.sieuthinem.vn]
 match = -95.2%%
@@ -42,8 +42,8 @@ title = Đệm bông ép everon 160 x 200 x 15 cm hàng chính hãng, ...
 url = https://tiki.vn/search?q=đệm bông ép everon 160 x 200 x 15 cm
 
 [demqueensweet.com]
-match = -119.0%%
-title = Giá Đệm Queensweet, Đệm Hàn Quốc Queensweet Hà Nội ...
+match = -57.1%%
+title = Đệm Queensweet Giá Rẻ – Đệm Hàn Quốc ...
 url = https://demqueensweet.com/
 
 [everon365.vn]
@@ -59,7 +59,7 @@ url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m6.html
 [everon.com.vn]
 match = -114.3%%
 title = 160 X 200 Archives | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/size/160-x-200/?srsltid=AfmBOorBd_Mvv9wAQhutNjFi9vZcqUTixot-Wsm-sBA-yV4Etw2nO9Kx
+url = https://everon.com.vn/size/160-x-200/
 
 [demxanh.com]
 match = -128.6%%
