--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-07-28 00:52:55
+lastsearch = 2024-07-28 05:32:16
 
 [www.galottery.com]
 match = -7.7%%
@@ -52,9 +52,9 @@ title = Student Attendance Protocol
 url = https://www.gadoe.org/External-Affairs-and-Policy/Policy/Lists/Attendance/Attachments/55/660_StdAttnProt.pdf
 
 [www.regmovies.com]
-match = -223.1%%
-title = Regal Hollywood - Gainesville Movie Tickets and ...
-url = https://www.regmovies.com/theatres/regal-hollywood-cinemas-gainesville-1421
+match = -215.4%%
+title = Regal Hollywood @ North I-85 Movie Tickets and ...
+url = https://www.regmovies.com/theatres/regal-hollywood-north-i-85-0745
 
 [www.facebook.com]
 match = -61.5%%
@@ -214,7 +214,7 @@ url = https://blog.redbrand.com/12-5-gauge-barbed-wire-vs-14-gauge-barbed-wire-f
 [books.google.com]
 match = -161.5%%
 title = Crystal Data: Inorganic compounds 1967-1969
-url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxVx54F_&sig=ACfU3U0Sconynj7aPcBBs70l47fsl8s-eg&hl=en&sa=X&ved=2ahUKEwj6xtfh5MeHAxWUmYkEHQavDV0Q6AF6BAgVEAM
+url = https://books.google.com/books?id=QZkhAQAAMAAJ&pg=RA6-SA1-PA120&lpg=RA6-SA1-PA120&dq=ga+ni+long+14&source=bl&ots=o2gxVyc2B-&sig=ACfU3U0bVGbKm06fU0ORhL3GG_h9hUuYzA&hl=en&sa=X&ved=2ahUKEwi9_uqZo8iHAxUlM1kFHaIPDRQQ6AF6BAgZEAM
 
 [ottawabraves.com]
 match = -292.3%%
