--- a/images/ruot-nem-korea-9f-18/config.ini
+++ b/images/ruot-nem-korea-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-18.html
 lastopen = 2024-06-10 00:54:35
 
 [search]
-lastsearch = 2024-07-27 21:14:34
+lastsearch = 2024-07-28 05:30:31
 
 [en.wikipedia.org]
 match = 15.0%%
@@ -42,9 +42,9 @@ title = Recently Added Coins
 url = https://cryptoslate.com/recently-added-coins/
 
 [30rates.com]
-match = -135.0%%
-title = Gold Price Prediction For Tomorrow, This Week And Month.
-url = https://30rates.com/gold-price-forecast-and-predictions
+match = -120.0%%
+title = USD to MXN forecast for tomorrow, this week and month.
+url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
 
 [www.akc.org]
 match = -45.0%%
@@ -292,9 +292,9 @@ title = July-August 2024 (Volume 76, Number 3)
 url = https://monthlyreview.org/2024/07/01/mr-076-03-2024-07_0/
 
 [www.vlr.gg]
-match = -35.0%%
-title = VLR.gg: Valorant esports coverage
-url = https://www.vlr.gg/
+match = -145.0%%
+title = Team Liquid Brazil vs. TBS GC | Game Changers 2024 Brazil
+url = https://www.vlr.gg/379181/team-liquid-brazil-vs-tbs-gc-game-changers-2024-brazil-series-2-ubsf
 
 [languagelog.ldc.upenn.edu]
 match = 0.0%%
