--- a/images/chieu-gap-dai-loan-lua-12/config.ini
+++ b/images/chieu-gap-dai-loan-lua-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-lua-12.html
 lastopen = 2024-06-09 22:43:24
 
 [search]
-lastsearch = 2024-07-27 23:18:59
+lastsearch = 2024-07-28 06:18:57
 
 [tiki.vn]
 match = 16.0%%
@@ -17,9 +17,9 @@ title = Cách Xem Lịch Chiếu Film Tại Taiwan
 url = https://www.tiktok.com/discover/cách-xem-lịch-chiếu-film-tại-taiwan?lang=en
 
 [shopee.vn]
-match = -8.0%%
-title = BẢN LỀ GẬP THÔNG MINH ĐÀI LOAN CHỊU LỰC 80KG
-url = https://shopee.vn/BẢN-LỀ-GẬP-THÔNG-MINH-ĐÀI-LOAN-CHỊU-LỰC-80KG-LOẠI-CAO-CẤP-INOX-BẢN-DÀY-CHẮC-CHẮN-GIÁ-ĐỠ-GẤP-BÀN-TREO-TƯỜNG-XẾP-GỌN-i.120824980.3158643972
+match = -28.0%%
+title = Chiếu cói tự nhiên kiểu gập đôi cao cấp Đài Loan.
+url = https://shopee.vn/Chiếu-cói-tự-nhiên-kiểu-gập-đôi-cao-cấp-Đài-Loan.-i.17414239.5745968545
 
 [congly.vn]
 match = 0.0%%
@@ -47,9 +47,9 @@ title = Quốc triều chính biên toát yếu
 url = https://books.google.com/books?id=Mm3W8DYq3t4C&pg=PA195&lpg=PA195&dq=chieu+gap+dai+loan+lua+12&source=bl&ots=Z0gE3WN7XZ&sig=ACfU3U1njmH1mt6t2GKj_0Co8xHNJbv7Rw&hl=en&sa=X&ved=2ahUKEwjztKSitsaHAxWWrokEHQEWNg0Q6AF6BAgZEAM
 
 [www.skyscanner.com.vn]
-match = -76.0%%
-title = Vé máy bay giá rẻ từ Taipei Taiwan Taoyuan đến Thành phố ...
-url = https://www.skyscanner.com.vn/routes/tpe/sgn/taipei-taiwan-taoyuan-to-thanh-pho-ho-chi-minh.html
+match = -60.0%%
+title = Vé máy bay giá rẻ từ Đài Bắc đến Hoa Kỳ - Skyscanner
+url = https://www.skyscanner.com.vn/routes/tpet/us/đai-bac-to-hoa-ky.html
 
 [www.bestprice.vn]
 match = -80.0%%
